增加删除到回收站的开关

--- a/NuGetCleaner/Strings/en-US/Resources.resw
+++ b/NuGetCleaner/Strings/en-US/Resources.resw
@@ -156,4 +156,7 @@
   <data name="MainPage_NuGetFolderPathBox.Header" xml:space="preserve">
     <value>Path to .nuget</value>
   </data>
+  <data name="MainPage_UseRecycleBinIfPossibleSwitch.Header" xml:space="preserve">
+    <value>Use recycle bin if possible</value>
+  </data>
 </root>
