--- a/NuGetCleaner/Strings/zh-CN/Resources.resw
+++ b/NuGetCleaner/Strings/zh-CN/Resources.resw
@@ -156,6 +156,9 @@
   <data name="MainPage_NuGetFolderPathBox.Header" xml:space="preserve">
     <value>.nuget文件夹位置</value>
   </data>
+  <data name="MainPage_PageTitle.Text" xml:space="preserve">
+    <value>NuGet缓存清理</value>
+  </data>
   <data name="MainPage_UseRecycleBinIfPossibleSwitch.Header" xml:space="preserve">
     <value>尝试删除到回收站</value>
   </data>
